Implement docker tasks
Signed-off-by: Bogdan Vaneev <warchantua@gmail.com>