@@ -1,8 +1,20 @@
 package jp.co.soramitsu.devops.docker
 
+
 import com.bmuschko.gradle.docker.DockerRemoteApiPlugin
+import com.bmuschko.gradle.docker.tasks.DockerVersion
+import com.bmuschko.gradle.docker.tasks.image.DockerBuildImage
+import com.bmuschko.gradle.docker.tasks.image.DockerPushImage
+import com.bmuschko.gradle.docker.tasks.image.Dockerfile
+import jp.co.soramitsu.devops.SoraTask
+import jp.co.soramitsu.devops.SoramitsuExtension
+import jp.co.soramitsu.devops.utils.PrintUtils
+import org.eclipse.jgit.annotations.NonNull
 import org.gradle.api.Plugin
 import org.gradle.api.Project
+import org.gradle.api.Task
+import org.gradle.api.plugins.ExtensionAware
+import org.gradle.api.tasks.Copy
 
 class DockerPlugin implements Plugin<Project> {
 
@@ -11,5 +23,110 @@ class DockerPlugin implements Plugin<Project> {
     @Override
     void apply(Project project) {
         project.pluginManager.apply(DockerRemoteApiPlugin.class)
+
+        SoramitsuExtension soramitsuConfig = project.extensions.getByType(SoramitsuExtension)
+
+        project.afterEvaluate { Project p ->
+            DockerConfig dockerConfig = configureExtension(project, "docker", DockerConfig, soramitsuConfig)
+            String registryUrl = dockerConfig.registryCredentials.url?.orNull
+            
+            setupDockerVersionTask(p)
+            setupDockerCleanTask(p)
+            setupDockerfileCreateTask(p, dockerConfig.jar)
+            setupDockerCopyJarTask(p, dockerConfig.jar)
+            setupDockerBuildTask(p, dockerConfig.tags)
+            setupDockerPushTask(p, registryUrl)
+        }
+    }
+
+    static <T, E> T configureExtension(Project project, String name, Class<T> type, E ext) {
+        return ((ExtensionAware) ext).extensions.create(name, type, project)
+    }
+
+    static void setupDockerVersionTask(Project project) {
+        project.tasks.register(SoraTask.dockerVersion, DockerVersion).configure { DockerVersion t ->
+            t.group = DOCKER_TASK_GROUP
+            t.description = "Print docker version"
+        }
+    }
+
+    static void setupDockerPushTask(Project project, String url) {
+        project.tasks.register(SoraTask.dockerPush, DockerPushImage).configure { DockerPushImage t ->
+            t.group = DOCKER_TASK_GROUP
+            t.description = "Push docker image to ${url}"
+
+            t.dependsOn([
+                    SoraTask.dockerBuild,
+            ])
+        }
+    }
+
+    static void setupDockerBuildTask(Project project, Iterable<String> tags) {
+        project.tasks.register(SoraTask.dockerBuild, DockerBuildImage).configure { DockerBuildImage t ->
+            t.group = DOCKER_TASK_GROUP
+            t.description = "Build docker image with tags ${tags}"
+
+            t.dependsOn([
+                    SoraTask.dockerClean,
+                    SoraTask.build,
+                    SoraTask.dockerCopyJar,
+                    SoraTask.dockerfileCreate
+            ])
+
+            t.tags.set(tags)
+
+            t.doLast {
+                println(PrintUtils.format("Built docker image with tags ${tags}"))
+            }
+        }
+    }
+
+    static void setupDockerCopyJarTask(Project project, @NonNull File jar) {
+        project.tasks.register(SoraTask.dockerCopyJar, Copy).configure { Copy t ->
+            t.group = DOCKER_TASK_GROUP
+            t.description = "Copy jar file to ${getDockerContextDir(project).path}"
+            t.dependsOn(SoraTask.build)
+
+            t.from(jar)
+            t.into(getDockerContextDir(project))
+        }
+    }
+
+    static void setupDockerfileCreateTask(Project project, @NonNull File jar) {
+        project.tasks.register(SoraTask.dockerfileCreate, Dockerfile).configure { Dockerfile t ->
+            t.group = DOCKER_TASK_GROUP
+            t.description = "Creates dockerfile in ${getDockerContextDir(project).path}"
+            t.dependsOn(SoraTask.dockerCopyJar)
+
+            t.from 'openjdk:8u191-jre-alpine'
+            t.label([
+                    "version"     : "${project.version}",
+                    "built-date"  : "${new Date()}",
+                    "built-by"    : "${System.getProperty('user.name')}",
+                    "built-jdk"   : "${System.getProperty('java.version')}",
+                    "built-gradle": "${project.gradle.gradleVersion}"
+            ])
+            t.instruction "MAINTAINER Bogdan Vaneev <bogdan@soramitsu.co.jp>"
+            t.instruction "ARG MAX_RAM_FRACTION=4"
+            t.instruction """ARG JAVA_OPTIONS="-XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap \\
+            -XX:MaxRAMFraction=\${MAX_RAM_FRACTION} -XX:+UseContainerSupport \\
+            -XX:+PrintFlagsFinal -XshowSettings:vm -version \${JAVA_OPTIONS}"
+            """
+            t.copyFile jar.name, "/${jar.name}"
+            t.defaultCommand 'java', '${JAVA_OPTIONS}', '-Djava.security.egd=file:/dev/./urandom', '-jar', "/${jar.name}"
+        }
+    }
+
+    static void setupDockerCleanTask(Project project) {
+        project.tasks.register(SoraTask.dockerClean).configure { Task t ->
+            t.group = DOCKER_TASK_GROUP
+            t.description = "Clean docker context dir"
+
+            getDockerContextDir(project).deleteDir()
+        }
+    }
+
+    static File getDockerContextDir(Project project) {
+        return project.file("${project.buildDir}/docker")
     }
 }
